--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Calling App</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" src="/css/style.css">
     <script src="/js/socket.io.js" defer></script>
     <script src="/js/main.js" defer></script>
 </head>
